--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1077,7 +1077,7 @@
                 }
             }
 
-            if (currentCube && turn > firstDoubleIndex) {
+            if (currentCube && turn > firstDoubleIndex && !doubleTurns.includes(turn)) {
                 let cubeY = 350;
                 if (currentCubePlayer === 'Black') {
                     cubeY = 600;
