--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1087,10 +1087,18 @@
 
             if (currentCube && turn > firstDoubleIndex && !doubleTurns.includes(turn)) {
                 let cubeY = 350;
-                if (currentCubePlayer === 'Black') {
-                    cubeY = 600;
-                } else if (currentCubePlayer === 'Red') {
-                    cubeY = 100;
+                if (invertColors) {
+                    if (currentCubePlayer === 'Red') {
+                        cubeY = 600;
+                    } else if (currentCubePlayer === 'Black') {
+                        cubeY = 100;
+                    }
+                } else {
+                    if (currentCubePlayer === 'Black') {
+                        cubeY = 600;
+                    } else if (currentCubePlayer === 'Red') {
+                        cubeY = 100;
+                    }
                 }
                 ctx.drawImage(currentCube, 375, cubeY, 50, 50);
             }
