--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -518,21 +518,29 @@
                         loadGame(availableGames[0].game_number);
                     }
                 } else if (availableGames.length > 0) {
-                    const matchText = matchLength > 0 ? `Матч до ${matchLength}<br>` : '';
-                    gameRedScore = scores.Red || 0;
-                    gameBlackScore = scores.Black || 0;
-                    const scoreText = `Счет: ${gameRedScore} - ${gameBlackScore}<br>`;
-                    playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
+                    if (matchLength === 0) {
+                        playersInfoDiv.innerHTML = "money game";
+                    } else {
+                        const matchText = `Матч до ${matchLength}<br>`;
+                        gameRedScore = scores.Red || 0;
+                        gameBlackScore = scores.Black || 0;
+                        const scoreText = `Счет: ${gameRedScore} - ${gameBlackScore}<br>`;
+                        playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
+                    }
                     topBar.innerHTML = '<div id="black-pips" class="pips-above-board">0</div>';
 
                     // Автоматически загружаем единственную игру
                     loadGame(availableGames[0].game_number);
                 } else {
-                    const matchText = matchLength > 0 ? `Матч до ${matchLength}<br>` : '';
-                    gameRedScore = scores.Red || 0;
-                    gameBlackScore = scores.Black || 0;
-                    const scoreText = `Счет: ${gameRedScore} - ${gameBlackScore}<br>`;
-                    playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
+                    if (matchLength === 0) {
+                        playersInfoDiv.innerHTML = "money game";
+                    } else {
+                        const matchText = `Матч до ${matchLength}<br>`;
+                        gameRedScore = scores.Red || 0;
+                        gameBlackScore = scores.Black || 0;
+                        const scoreText = `Счет: ${gameRedScore} - ${gameBlackScore}<br>`;
+                        playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
+                    }
                     topBar.innerHTML = '<div id="black-pips" class="pips-above-board">0</div>';
                     infoDiv.innerHTML = '<div class="error">No games found in this analysis.</div>';
                 }
@@ -585,7 +593,11 @@
                         const gameScores = gameInfo.scores || {};
                         gameRedScore = gameScores.Red || 0;
                         gameBlackScore = gameScores.Black || 0;
-                        playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
+                        if (matchLength === 0) {
+                            playersInfoDiv.innerHTML = "money game";
+                        } else {
+                            playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
+                        }
                         topBar.innerHTML = (document.getElementById('gameSelect') ? document.getElementById('gameSelect').outerHTML : '') + '<div id="black-pips" class="pips-above-board">0</div>';
 
                         // Найти все индексы ходов с удвоением
