--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -520,7 +520,7 @@
                 } else if (availableGames.length > 0) {
                     if (matchLength === 0) {
                         playersInfoDiv.innerHTML = "Манигейм";
-                        playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
+                        playersInfoDiv.innerHTML = `$Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
                     } else {
                         const matchText = `Матч до ${matchLength}<br>`;
                         gameRedScore = scores.Red || 0;
