--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -518,31 +518,11 @@
                         loadGame(availableGames[0].game_number);
                     }
                 } else if (availableGames.length > 0) {
-                    if (matchLength === 0) {
-                        playersInfoDiv.innerHTML = "Манигейм";
-                        playersInfoDiv.innerHTML = `$Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
-                    } else {
-                        const matchText = `Матч до ${matchLength}<br>`;
-                        gameRedScore = scores.Red || 0;
-                        gameBlackScore = scores.Black || 0;
-                        const scoreText = `Счет: ${gameRedScore} - ${gameBlackScore}<br>`;
-                        playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
-                    }
                     topBar.innerHTML = '<div id="black-pips" class="pips-above-board">0</div>';
 
                     // Автоматически загружаем единственную игру
                     loadGame(availableGames[0].game_number);
                 } else {
-                    if (matchLength === 0) {
-                        playersInfoDiv.innerHTML = "Манигейм";
-                        playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
-                    } else {
-                        const matchText = `Матч до ${matchLength}<br>`;
-                        gameRedScore = scores.Red || 0;
-                        gameBlackScore = scores.Black || 0;
-                        const scoreText = `Счет: ${gameRedScore} - ${gameBlackScore}<br>`;
-                        playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
-                    }
                     topBar.innerHTML = '<div id="black-pips" class="pips-above-board">0</div>';
                     infoDiv.innerHTML = '<div class="error">No games found in this analysis.</div>';
                 }
@@ -596,7 +576,7 @@
                         gameRedScore = gameScores.Red || 0;
                         gameBlackScore = gameScores.Black || 0;
                         if (matchLength === 0) {
-                            playersInfoDiv.innerHTML = "money game";
+                            playersInfoDiv.innerHTML = "Манигейм. Белые: " + redPlayer + " – Черные: " + blackPlayer + "<br>";
                         } else {
                             playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
                         }
