--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -572,7 +572,10 @@
 
                         // Добавьте поле is_visible
                         data.forEach(item => {
-                            item.is_visible = error !== '1' || (!item.is_best_move && (Array.isArray(item.moves) && item.moves.length > 0 || item.action === 'win' || item.action === 'double' || item.action === 'take'));
+                            item.is_visible = (error === '0') ||
+                                (error === '1' && !item.is_best_move && (Array.isArray(item.moves) && item.moves.length > 0 || item.action === 'win' || item.action === 'double' || item.action === 'take')) ||
+                                (error === '2' && item.player_name === redPlayer && !item.is_best_move && (Array.isArray(item.moves) && item.moves.length > 0 || item.action === 'win' || item.action === 'double' || item.action === 'take')) ||
+                                (error === '3' && item.player_name === blackPlayer && !item.is_best_move && (Array.isArray(item.moves) && item.moves.length > 0 || item.action === 'win' || item.action === 'double' || item.action === 'take'));
                         });
 
 
