--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -249,7 +249,7 @@
         .pips-below-board {
             position: absolute;
             right: 0;
-            top: 780px;
+            top: 0;
             margin: 0;
         }
 
