--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -366,9 +366,8 @@
 
         #top-bar {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            position: relative;
         }
 
         .pips-above-board {
@@ -381,9 +380,6 @@
             text-align: right;
             display: block;
             width: fit-content;
-            position: absolute;
-            right: 0;
-            bottom: 0;
         }
 
         .pips-below-board {
