--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -366,7 +366,7 @@
 
         #top-bar {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-end;
             align-items: center;
         }
 
@@ -404,6 +404,10 @@
             text-align: right;
             display: block;
             width: fit-content;
+            position: absolute;
+            right: 0;
+            top: 0;
+            margin: 0;
         }
 
         .pips-below-board {
